err/django-packageutils.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/distribute-0.7.3-py3.5.egg-info'...
Listing './lib/python3.5/site-packages/django_packageutils-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/packageutils'...
Listing './lib/python3.5/site-packages/packageutils/syncdb'...
Listing './lib/python3.5/site-packages/packageutils/syncdb/autouser'...
Compiling './lib/python3.5/site-packages/packageutils/syncdb/autouser/__init__.py'...
***   File "./lib/python3.5/site-packages/packageutils/syncdb/autouser/__init__.py", line 57
    print '*' * 80
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/packageutils/test'...
Listing './lib/python3.5/site-packages/packageutils/testcase'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools_git'...
Listing './lib/python3.5/site-packages/setuptools_git-1.2.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/tests/blogs'...
Listing './lib/python3.5/site-packages/tests/blogs/fixtures'...
Listing './lib/python3.5/site-packages/tests/blogs/templates'...
Listing './lib/python3.5/site-packages/tests/blogs/templates/blog'...
Listing './lib/python3.5/site-packages/tests/blogs/tests'...
Listing './lib/python3.5/site-packages/tests/blogs/tests/testapp'...
Listing './lib/python3.5/site-packages/tests/blogs/tests/testapp/fixtures'...
Listing './lib/python3.5/site-packages/tests/static'...
Listing './lib/python3.5/site-packages/tests/static/css'...
Listing './lib/python3.5/site-packages/tests/static/css/image'...
Listing './lib/python3.5/site-packages/tests/templates'...
Listing './lib/python3.5/site-packages/tests/templates/blogs'...
Listing './lib/python3.5/site-packages/tests/templates/registration'...
Listing './share'...
Listing './share/python-wheels'...
